--- a/pop.html
+++ b/pop.html
@@ -4,10 +4,40 @@
   <meta charset="utf-8"/>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>lcl_blog</title>
+  <style>
+    body {
+      background: #ED5565;
+      width: 260px;
+      padding: 0;
+      margin: 0;
+    }
+    .list {
+      width: 100%;
+      height: 47px;
+      line-height: 47px;
+      font-size: 14px;
+      color: #fff;
+    }
+    .list a {
+      float: left;
+      width: 100%;
+      height: 100%;
+      font-size: 14px;
+      padding-left: 30px;
+      color: #fff;
+      text-decoration: none;
+      border-bottom-color: #DA4453;
+    }
+    .list a:hover {
+      background: #DA4453;
+      border-bottom-color: #DA4453;
+    }
+  </style>
 </head>
-<body style="width:100px;">
-  <div><a href="javascript:;" id="open_url_new_tab">打开lcl_blog</a></div>
-
+<body>
+  <div class="list" style="text-align: center;font-weight: blod;">我的链接管理</div>
+  <div class="list"><a href="javascript:;" id="open_url_new_tab">lcl blog</a></div>
+  <div class="list"><a href="javascript:;" id="open_url_new_tab_pi">pi dashboard</a></div>
   <script type="text/javascript" src="js/jquery-1.8.3.js"></script>
   <script type="text/javascript" src="js/popup.js"></script>
 </body>
