--- a/pop.html
+++ b/pop.html
@@ -38,6 +38,8 @@
   <div class="list" style="text-align: center;font-weight: blod;">我的链接管理</div>
   <div class="list"><a href="javascript:;" id="open_url_new_tab">lcl blog</a></div>
   <div class="list"><a href="javascript:;" id="open_url_new_tab_pi">pi dashboard</a></div>
+  <div class="list"><a href="javascript:;" id="open_url_new_tab_partainer">partainer.io</a></div>
+  <div class="list"><a href="javascript:;" id="open_url_new_tab_explorer">explorer</a></div>
   <script type="text/javascript" src="js/jquery-1.8.3.js"></script>
   <script type="text/javascript" src="js/popup.js"></script>
 </body>
